--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = "1"
 listenfd = "0.3"
 log = "0.4"
 mime = "0.3"
+pprof-integration = "0.1.0"
 rand = "0.8"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
 serde = { version = "1", features = ["derive"] }
