--- a/ansible/roles/web/handlers/main.yaml
+++ b/ansible/roles/web/handlers/main.yaml
@@ -2,7 +2,7 @@
   become: true
   become_user: root
   ansible.builtin.systemd:
-    name: isucondition.rust
+    name: isucondition.go
     state: restarted
     daemon_reload: true
   listen: restart_webapp
