icon from nginx score: 71527(71528 - 1) : pass

--- a/webapp/nginx/etc/nginx/sites-enabled/isucondition.conf
+++ b/webapp/nginx/etc/nginx/sites-enabled/isucondition.conf
@@ -18,7 +18,13 @@ server {
     # /assets にアクセスがあった場合、静的ファイルを配信
     location /assets/ {
         root /home/isucon/webapp/public/;
-        expires 1d;  # 例えば、30日間キャッシュ
+        expires 1d;
     }
-
+    
+    location /home/isucon/webapp/public/icon/ {
+        internal;
+        open_file_cache max=200;
+        alias /home/isucon/webapp/public/icon/;
+        expires 1d;
+    }
 }
