--- a/webapp/nginx/etc/nginx/sites-enabled/isucondition.conf
+++ b/webapp/nginx/etc/nginx/sites-enabled/isucondition.conf
@@ -1,3 +1,9 @@
+upstream main {
+    server 127.0.0.1:3000;
+	keepalive_requests 1000000;
+	keepalive 256;
+}
+
 server {
     listen 443 ssl http2;
 
@@ -6,7 +12,7 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://main;
     }
 
     location = / {
